<resources>
    <string name="app_name">OXO Stay</string>
    <string name="new_vision_of_luxury">A new vision of Luxury</string>
    <string name="dummy_large_text"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </string>
    <string name="offer_dummy_large_text">\> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </string>
    <string name="dummy_small_text"> Lorem Ipsum is simply dummy text</string>
    <string name="comfortable_room">Comfortable Rooms</string>
    <string name="pleasent_food">Pleasant food</string>
    <string name="search_city_area">Search city or area</string>
    <string name="login_no">Login now</string>
    <string name="otp_screen">OTP Screen</string>
    <string name="covid_safety">COVID-19 Safety Measures</string>
    <string name="location">Location</string>
    <string name="cancellation_policy">Cancellation policy</string>
    <string name="signup_now">Signup now</string>
    <string name="favourite">Favourites</string>
    <string name="forgot_pass">Forgot Password</string>
    <string name="forgot_pass_text">Forgot your password? Don\'t worry enter your email below we will send you a link from where you can create a new password. Happy Booking.</string>
    <string name="faq">FAQs</string>
    <string name="enter_forgot_email">Enter your Email - </string>
    <string name="my_booking">My Booking</string>
    <string name="my_profile">My Profile</string>
    <string name="how_it_works">How it works</string>
    <string name="latest_offers">Latest Offers</string>
    <string name="choose_city">Choose your city</string>
    <string name="select_date">Select date and slot</string>
    <string name="book_checkin">Book check-in time</string>
    <string name="refer_and_earn">Refer and Earn</string>
    <string name="covid19_guidelines">Covid-19 Guidelines</string>
    <string name="dont_have_acc">Don’t have an account? Signup</string>
    <string name="already_have_acc">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="forgot_pass_login">Forgot Password? Set new a one.</string>
    <string name="am">AM</string>
    <string name="paytm">Paytm</string>
    <string name="upi">UPI</string>
    <string name="cash">Cash</string>
    <string name="payment_method">Payment Methods :</string>
    <string name="apply_code">Apply Coupon</string>
    <string name="enter_promo">promo code</string>
    <string name="total_final">Total (Including Taxes)</string>
    <string name="use_credits">Use Credits from Wallet</string>
    <string name="pm">PM</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="upcoming">Upcoming</string>
    <string name="send_otp">Send OTP</string>
    <string name="otp">OTP</string>
    <string name="previous">Previous</string>
    <string name="about_the_program">About the Program</string>
    <string name="refer_earn">Refer and Earn</string>
    <string name="support">Support</string>
    <string name="current_offers">Current Offers</string>
    <string name="how_to_current_offers">How to avail your Current Offers</string>
    <string name="exclusive_offers">Exclusive Offers</string>
    <string name="tandc">Terms and Conditions</string>
    <string name="tandc_oxo">OXO Stay Terms :-</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about_us">About Us</string>
    <string name="start">Start</string>
    <string name="for_any_issues">For any issues or queries contact here, we\'re available 24X7</string>
    <string name="offers">Offers</string>
    <string name="wallet">Wallet</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="amount">Amount</string>
    <string name="skip">Skip</string>
    <string name="share_using">Skip</string>
    <string name="next">Next</string>
    <string name="enter_ref_code">Referral Code</string>
    <string name="enter_email">Email</string>
    <string name="how_to_avail">How to Avail</string>
    <string name="enviroment_sanitisation">Environment Sanitization: </string>
    <string name="staff_training">Staff Training</string>
    <string name="refer">Send invite</string>
    <string name="program_lines_one">\u25CF  Download the OXOStay app</string>
    <string name="program_lines_two">\u25CF  Share your referral code with your friends</string>
    <string name="program_lines_three">\u25CF  Your friend registers using the referral code</string>
    <string name="program_line_one">\u25CF  Refer a friend and get 500 OXOStay credits to your account</string>
    <string name="program_line_two">\u25CF  OXOStay Credits will be valid for 90 days</string>
    <string name="program_line_three">\u25CF  Referral credits can only be used on Mobile App</string>
    <string name="house_keeping">\u25CF  House-keeping and service staff to wear masks and gloves at all times</string>
    <string name="staff_train">\u25CF  Staff is trained at least twice a week on social distancing, hand hygiene and thermal temperature checks</string>
    <string name="staff_temp">\u25CF  Temperature checks for staff twice a day</string>
    <string name="rooms_dis">\u25CF  Rooms Disinfection- rooms are disinfected daily as per guidelines mentioned by WHO</string>
    <string name="rooms_linen">\u25CF  Rooms Linen- Changed after every guest checks-out and as per request as well</string>
    <string name="soaps_dis">\u25CF  Soap Dispensers- All washrooms are quipped with soap dispensers</string>
    <string name="common_area">\u25CF  Common Area- The common area is sanitized daily</string>
    <string name="guidelines_policies">Guidelines and Policies</string>
    <string name="total_balance">Total Balance</string>
    <string name="change_pass">Change Password</string>
    <string name="sure_logout">Are you sure, you want to Logout</string>
    <string name="logout">Logout</string>
    <string name="three_hour">3hr</string>
    <string name="six_hour">6hr</string>
    <string name="twelve_hour">12hr</string>
    <string name="enter_current_pass">Enter your current password</string>
    <string name="enter_new_pass">Enter your new password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="available_slots">Select Time -</string>
    <string name="for_today">For Today</string>
    <string name="hotel_info">Hotel Information</string>
    <string name="Another_day">Another Day</string>
    <string name="where">Where?</string>
    <string name="when">When?</string>
    <string name="edit">Edit</string>
    <string name="rooms">Rooms</string>
    <string name="send_mail">Send Mail</string>
    <string name="booking_id">Booking ID</string>
    <string name="booked">Booked</string>
    <string name="time_arrival">Time of Arrival?</string>
    <string name="search_hotel">Search Hotel</string>
    <string name="search">Search</string>
    <string name="continue_booking">Continue Booking</string>
    <string name="pay">Pay</string>
    <string name="signup">Signup</string>
    <string name="phone_no">Phone no.</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="title_activity_mapss">Map</string>
</resources>