<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlack"
    tools:context=".screens.CovidGuidelinesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_covid"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_180sdp"
        android:scaleType="centerCrop"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guidelines_policies"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/colorWhite"
        android:textSize="22sp"
        android:fontFamily="@font/roboto_bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enviroment_sanitisation"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_regular"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rooms_dis"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_thin"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rooms_linen"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_thin"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/soaps_dis"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_thin"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/common_area"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_thin"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/staff_training"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_regular"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/house_keeping"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_thin"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/staff_train"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_thin"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/staff_temp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:fontFamily="@font/roboto_thin"
        android:layout_marginBottom="@dimen/_30sdp"
        />

    </LinearLayout>

</ScrollView>