<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_pics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:background="@color/colorTransDarkGrey">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_40sdp"
            android:background="@color/colorLightGrey">

            <ImageView
                android:id="@+id/iv_login_head"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_220sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_10sdp"
                />

          </RelativeLayout>
    </RelativeLayout>

    <TextView
        android:id="@+id/tv_ref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refer_earn"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/rl_pics"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/colorWhite"/>


        <LinearLayout
            android:id="@+id/ll_ref_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_ref"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_the_program"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/program_line_one"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/roboto_thin"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/program_line_two"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/roboto_thin"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/program_line_three"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/roboto_thin"
            android:textColor="@color/colorWhite"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_ref_fields_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_ref_fields"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_50sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/how_to_avail"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/program_lines_one"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/roboto_thin"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/program_lines_two"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/roboto_thin"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/program_lines_three"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/roboto_thin"
            android:textColor="@color/colorWhite"/>

        </LinearLayout>

      </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/rl_refer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAppYellow">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBlack"
            android:textSize="22sp"
            android:layout_centerInParent="true"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/refer" />

    </RelativeLayout>

</RelativeLayout>