<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_150sdp"
    android:background="@color/colorBlack"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sure_logout"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:layout_margin="@dimen/_20sdp"
        android:fontFamily="@font/roboto_regular"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:gravity="right"
        android:layout_marginTop="@dimen/_25sdp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_no"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorAppYellow"
            android:text="@string/no"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginRight="@dimen/_10sdp"
            android:fontFamily="@font/roboto_bold"/>

        <TextView
            android:id="@+id/tv_yes"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="@dimen/_10sdp"
            android:textColor="@color/colorAppYellow"
            android:text="@string/yes"
            android:fontFamily="@font/roboto_bold"/>

    </LinearLayout>

</LinearLayout>