<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBlack"
    tools:context=".screens.WalletActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_120sdp"
        android:background="@color/colorAppYellow">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:src="@drawable/ic_left_arrow"/>

        <TextView
            android:id="@+id/tv_wallet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wallet"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:fontFamily="@font/roboto_bold"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_gravity="center"
            android:gravity="center"/>

        <TextView
            android:id="@+id/tv_wallet_balance_bio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_balance"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            android:layout_below="@+id/tv_wallet"
            android:fontFamily="@font/roboto_regular"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:layout_gravity="center"
            android:gravity="center"/>

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_below="@+id/tv_wallet"
            android:layout_marginTop="@dimen/_22sdp"
            android:layout_toRightOf="@+id/tv_wallet_balance_bio"
            android:src="@drawable/ic_wallet_color"/>

        <TextView
            android:id="@+id/tv_wallet_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2250"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:layout_below="@+id/tv_wallet_balance_bio"
            android:fontFamily="@font/roboto_bold"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_gravity="center"
            android:gravity="center"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:background="@color/colorAppLightYellow"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/roboto_regular"
            android:textSize="14sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/roboto_regular"
            android:textSize="14sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:fontFamily="@font/roboto_regular"
            android:textSize="14sp"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_wallet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>